# fuckyoumoto-utils

./: LICENSE  backup_critical_partitions.sh  bun.lockb  fix_fastbootd_softbrick.sh  flake.nix  flash_stock.sh  full_dump.py  get_logs.sh  mtkbootcmd.py  oem_keygen.py  package.json  parse_cid.py  preloader_diff.py  remove_carrier_block.py  shell.nix  tailwind.config.js  write_partition.sh
scripts/: backup_critical_partitions.sh  clean_logs.py  get_logs.sh
sources/fogorow/: MT6768_Android_scatter.txt  MT6768_Android_scatter.xml  MT6768_Android_scatter_reserve_userdata.txt  fogorow_partitions.csv
sources/lamu/: MT6768_Android_scatter.txt  MT6768_Android_scatter_reserve_userdata.txt
sources/penangf/: MT6768_Android_scatter.txt  MT6768_Android_scatter.xml  penangf_partitons.csv
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/scripts/: backup.py  da.py  get_logs.py
src-tauri/src/: lib.rs  main.rs
src/css/: markdown.css
src/lib/: main.md
src/routes/: +layout.svelte  +page.svelte  Sidebar.svelte
src/routes/documentation/: +page.svelte
src/routes/mtkclient/: +page.svelte
utils/: constants.py  device.py  mtkclient_wrapper.py  path.py
